tests/errors/buffertypedef_T117.pyx
# ticket: 117
# mode: error

ctypedef object[float] mybuffer

_ERRORS = u"""
4:23: Syntax error in ctypedef statement
"""
